--- a/assets/css/blue.css
+++ b/assets/css/blue.css
@@ -253,7 +253,7 @@ a {
   color: #0f6cb2;
 }
 .single-product .product-info .price-container .price-box .price {
-  color: #ff7878;
+  color: tomato;
 }
 .single-product .product-info .quantity-container .cart-quantity .arrows .arrow:hover,
 .single-product .product-info .quantity-container .cart-quantity .arrows .arrow:focus {
