--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1200,8 +1200,8 @@ header{
 }
 
 .main-header {
-  padding:25px 0px 30px 0px;
-  background: #157ed2;
+  padding:10px 0px 12px;
+  background: tomato;
 }
 .main-header .logo-holder {
   margin-top:5px;
@@ -1684,7 +1684,7 @@ header{
   font-size: 20px;
   font-family:'Barlow', sans-serif;
   padding: 15px 17px;
-  background-color: #157ed2;
+  background-color: tomato;
   font-weight:500;
   letter-spacing: 0.2px;
 }
@@ -4021,7 +4021,7 @@ font-family: FontAwesome;
 .single-product .qty {float:left; padding-left:15px}
 .single-product .qty-count {float:left;  padding-left:15px}
 .single-product .add-btn {float:left;  padding-left:15px}
-.single-product .add-btn .btn-primary {padding:12px 30px; font-size: 18px; background-color: #fdd922; color:#333}
+.single-product .add-btn .btn-primary {padding:12px 30px; font-size: 18px; background-color: tomato; color:#333}
 
 .single-product .product-info .quantity-container .label {
   font-size: 14px;
